--- a/index.html
+++ b/index.html
@@ -55,9 +55,19 @@ organiser: "Lucas Gatsas"
 			</div><!-- .cover-content -->
 		</header><!-- .cover -->
 		<div class="page-description">
+			<h1>전공</h1>
+			<p>
+				<ul>
+					<li> 경희대학교 공과대학 산업경영공학과 학사 </li>
+					<li> 학부 시절 C언어 교양 이수</li>
+					<li> 네이버에서 주최한 소프트 웨어 멤버십 예비과정 3기 멤버로 합격하여 개발자 교육 이수 및 프로젝트 진행 하였습니다. </li>
+					<li> 그 후 하계 네이버 캘린더 인턴 과정 수료 후 네이버로 입사하였습니다.</li>
+				</ul>
+			</p>
 			<h1>경력 사항</h1>
 			<p>
-
+				<img src='https://media-exp3.licdn.com/dms/image/C510BAQFhtx-lqarM1A/company-logo_100_100/0/1557292085699?e=1633564800&v=beta&t=jQNk0oiykZ5ACddAdi7dvbzJPDryyLLZ85G0Of-F3Q0'/>
+				<img src='https://media-exp3.licdn.com/dms/image/C560BAQGAjCDaVA_JBQ/company-logo_100_100/0/1602724266399?e=1633564800&v=beta&t=GfiQ2OOmrJYDv0C4A1q8o4UREizxRayqw5tjpU4bCTI'/>
 			</p>
 			<hr/>
 			<h1>보유 기술</h1>
