--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ organiser: "Lucas Gatsas"
 
 	<link href="http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic%7CMontserrat:400,700" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="../../assets/css/style-v=cba79c2df0.css" />
-
+	<link rel="stylesheet" type="text/css" href="../../node_modules/github-markdown-css/github-markdown.css"/>
 
 
 	<!--[if lt IE 9]>
