:sparkles: 영어 페이지 추가

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			<h2>
 				<code>BE > FE 개발자로 전향</code>
 			</h2>
-			<h2>2019: 사내 지식iN 통계 시스템 개발 as a FE developer<a href='./img/beeeye.png'>Link</a></h2>
+			<h2>2019: 사내 지식iN 통계 시스템 개발 as a FE developer <a href='./img/beeeye.png'>Image</a></h2>
 			<h3>Stack</h3>
 			<ul>
 				<li><code>FE</code>: react js, es6, echart, typescript, axios, antd</li>
@@ -176,8 +176,7 @@
 			</ul>
 			<h1>기타 활동</h1>
 			<ul>
-				<li>고려대학교 창업 경진대회</li>
-				<li>AX (https://axchange.co/ko) 초기 아이디에이션 단계 참여</li>
+				<li>AX (https://axchange.co/ko) 초기 아이디에이션 단계 참여 및 고려대학교 Startup Express Winter Season 장려상 <a href='./img/KoreaUniv.jpeg'>Image</a></li>
 				<li>2019 JS Conf 봉사활동</li>
 				<li>2020/2021 네이버 전문연구요원 채용 - 코딩 테스트 문제 출제의원</li>
 				<li>신입 사원 멘토링</li>
@@ -199,7 +198,7 @@
   
   
 	<div class="read-more">
-	  <p>contact email<br>hyos810@naver.com
-   </p>   
+	  <p>contact email<br>hyos810@naver.com</p>
+	  <p><a href='./english.html'>English</a></p>   
 	</div>
   </footer>
