:sparkles: 그룹클래스 이미지 추가

--- a/english.html
+++ b/english.html
@@ -169,6 +169,10 @@
 4. Introducing e2e Tests
 5. Transfer and refactoring existing eXpert Center pages
 6. Responsible for service distribution and server management using k8s, docker</code></pre>
+            <h3>Link</h3>
+			<ul>
+				<li><a href='https://img.etnews.com/photonews/2106/1427652_20210625110714_805_0001.jpg'>Group Class</a></li>
+			</ul>
 			<h1>Toy Projects / Sharing</h1>
 			<ul>
 				<li>Development of Intellij Plugin with Kotlin for automated annotation during knowledge iN platform transition</li>
