--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
 4. e2e 테스트 도입
 5. 기존 eXpert Center 페이지 이관 및 리팩토링
 6. k8s, docker를 이용한 서비스 배포 및 서버 관리 담당</code></pre>
+			<h3>관련 링크</h3>
+			<ul>
+				<li><a href='https://img.etnews.com/photonews/2106/1427652_20210625110714_805_0001.jpg'>지식in 그룹클래스</a></li>
+			</ul>
 			<h1>토이 프로젝트 / 팀내 공유 기술</h1>
 			<ul>
 				<li>지식iN 플랫폼 전환중 자동 주석 다는 Intellij Plugin을 Kotlin으로 개발</li>
