:fire: 경력사항 수정

--- a/english.html
+++ b/english.html
@@ -54,7 +54,7 @@
 				<ul>
 					<li><strong>Bachelor of Technology, Kyung Hee University</strong> & Valedictorian</li>
 					<li>passed software membership program hosted by Naver and completed the developer training and proceeded with the project.</li>
-					<li>After completing the summer Naver Calendar internship course in the second semester of the fourth grade, joined Naver.</li>
+					<li>After completing the summer Naver Calendar internship course, joined Naver.</li>
 				</ul>
 			<h1>Certificate</h1>
 			<ul>
@@ -64,6 +64,12 @@
 				<li>MOS (Microsoft Office Specialist)</li>
 			</ul>
 			<h1>Career 👩‍💻</h1>
+                <h2>
+                    2013 : Software membership program hosted by Naver
+                </h2>
+                <h2>
+                    2014 : Naver Calendar Summer Internship
+                </h2>
 				<h2>
 					2014 ~ 2017 : Naver Calender as a full-stack developer
 				</h2>
