--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 			<h1>전공  👩🏻‍🎓</h1>
 				<ul>
 					<li><strong>경희대학교 공과대학 산업경영공학과 학사</strong> 및 학과 내 수석 졸업</li>
-					<li>학부 4학년 1학기에 네이버에서 주최한 <code>소프트웨어 멤버십 예비과정</code> 3기 멤버로 합격하여 개발자 교육 이수 및 프로젝트 진행</li>
-					<li>그 후 4학년 2학기에 하계 네이버 캘린더 인턴 과정 수료 후 네이버로 입사</li>
+					<li>네이버에서 주최한 <code>소프트웨어 멤버십 예비과정</code> 3기 멤버로 합격하여 개발자 교육 이수 및 프로젝트 진행</li>
+					<li>하계 네이버 캘린더 인턴 과정 수료 후 네이버로 입사</li>
 				</ul>
 			<h1>자격증</h1>
 			<ul>
@@ -64,6 +64,12 @@
 				<li>MOS (Microsoft Office Specialist)</li>
 			</ul>
 			<h1>경력 사항 👩‍💻</h1>
+				<h2>
+					2013 : 네이버 소프트웨어 멤버십 예비과정 수료
+				</h2>
+				<h2>
+					2014 : Naver Calendar 하계 인턴십 수료
+				</h2>
 				<h2>
 					2014 ~ 2017 : Naver Calender as a full-stack developer
 				</h2>
