:sparkles: 기타 활동 - 그라폴리오 연재 추가

--- a/english.html
+++ b/english.html
@@ -190,6 +190,7 @@
 				<li>2019 JS Conf as volunteer</li>
 				<li>2020/2021 Naver Recruitment of professional researchers - Member for coding test questions.</li>
 				<li>Mentoring new employees</li>
+				<li><a href='https://grafolio.naver.com/j11c6p'>Naver Grafolio</a></li>
 			</ul>
 		</article>
 		<div class="inner-wide">
