--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
 				<li>2019 JS Conf 봉사활동</li>
 				<li>2020/2021 네이버 전문연구요원 채용 - 코딩 테스트 문제 출제의원</li>
 				<li>신입 사원 멘토링</li>
+				<li><a href='https://grafolio.naver.com/j11c6p'>그라폴리오</a>그림 연재</li>
 			</ul>
 		</article>
 		<div class="inner-wide">
