--- a/english.html
+++ b/english.html
@@ -64,12 +64,104 @@
 				<li>MOS (Microsoft Office Specialist)</li>
 			</ul>
 			<h1>Career 👩‍💻</h1>
-                <h2>
-                    2013 : Software membership program hosted by Naver
-                </h2>
-                <h2>
-                    2014 : Naver Calendar Summer Internship
-                </h2>
+                
+		
+			
+			
+			
+<!--- 2020 ~ 2022 -->
+			<h2>2020 ~ 2022: Development Naver Knowledge iN eXpert FE as a FE developer</h2>
+			<h3>Stack</h3>
+			<ul>
+				<li><code>FE</code>: node, react, es6, apollo, graphql, typescript, recoil</li>
+				<li><code>TEST</code>: playwright, puppeteer, jest</li>
+				<li><code>Build</code>: webpack</li>
+				<li><code>ETC</code>: k8s, docker, eslint, prettier, jenkins, slack, sentry</li>
+			</ul>
+			<pre lang="no-highlight"><code>1. Leading Naver Knowledge iN expert Center FE part (Project Design & Construction)
+2. Development of notice and notice management page
+3. Knowledge iN eXpert group class (online class) FE development
+4. Introduction of e2e Tests
+5. Transfer and refactoring existing eXpert Center pages
+6. Responsible for service distribution and server management using k8s, docker
+7. Lots of interviewer experience.
+8. Development of slackbot for monitoring
+9. Build Jenkins CI (deploy, e2eTest)
+</code></pre>
+			<h3>Link</h3>
+			<ul>
+				<li><a href='https://img.etnews.com/photonews/2106/1427652_20210625110714_805_0001.jpg'>Group Class</a></li>
+			</ul>
+			<!--- 2020 ~ 2022 -->
+			<!-- 2019 ~ 2020 -->
+			<h2>2019 ~ 2020: Naver Influencer as a FE developer <a href='https://in.naver.com/'>Link</a></h2>
+			<h3>Stack</h3>
+			<ul>
+				<li><code>FE</code>: node, react js, es6, redux, apollo, graphql, typescript, axios</li>
+				<li><code>TEST</code>: puppeteer, jest</li>
+				<li><code>Build</code>: webpack</li>
+				<li><code>ETC</code>: k8s, docker, eslint, prettier</li>
+			</ul>
+			<pre lang="no-highlight"><code>1. Participated in the launch of Naver influencer
+2. Development of FE-level components for collecting statistics on visits to influencer
+3. Development of photo editing components for editing home profiles (customizing the Cropper library)
+4. Develop influencer Support Pages
+5. Home Edit UI/UX Renewal
+6. Leading and development of influencer HOWTO projects
+7. Introduction of e2e Testing
+8. Responsible for real deployment and monitoring of services</code></pre>
+			<h3>관련 링크</h3>
+			<ul>
+				<li><a href='https://in.naver.com/baby0817/howto'>HOW TO</a></li>
+				<li><a href='https://in.naver.com/apply'>지원하기 (네이버 로그인 필요)</a></li>
+			</ul>
+			<!-- 2019 ~ 2020 -->
+			<!--- 2017 ~~ 2019 -->
+			<h2>
+				<code>BE > FE Developer</code>
+			</h2>
+			<!--- 2019 -->
+			<h2>2019: Development Knowlege IN Statistics Site as a FE developer <a href='./img/beeeye.png'>Image</a></h2>
+			<h3>Stack</h3>
+			<ul>
+				<li><code>FE</code>: react js, es6, echart, typescript, axios, antd</li>
+				<li><code>Build</code>: webpack</li>
+			</ul>
+			<pre lang="no-highlight"><code>- First project since switching to FE developer, independently developing statistical tools.
+- Rendering as charts and tables by combining statistical values received from api</code></pre><!--- 2019 -->
+			<!--- 2017 ~~ 2019 -->
+			<h2>2017 ~ 2019: Naver Knowlege iN as a full-stack developer</h2>
+			<h3>Stack</h3>
+			<ul>
+				<li><code>DB</code>: mysql</li>
+				<li><code>BE</code>: Java, Spring Framework, JDBC, PHP</li>
+				<li><code>FE</code>: JSP, Jindo JS, Jquery, CSS</li>
+				<li><code>Build</code>: Gradle</li>
+				<li><code>ETC</code>: docker, lombok</li>
+			</ul>
+			<pre lang="no-highlight"><code>1. Tranfer Jindo> Jquery Code.
+2. Designing scholarship donation page database/Admin tool/api/Front
+- Participation in renewal educational donations
+- Development of scholarship donation pages and "donated tree" pages alone.
+
+3. Naver Content Search Name Card > Provided "Knowledge IN Ranking" api and created Spring Batch code.
+
+4. Transfer Struts > Spring Framework Code
+
+5. Lead project of transferring knowledge IN FE part.
+- The FE part of Knowledge IN was separated and transferred to its child company.
+
+6. Participate in knowledge IN "question & answer end page" renewal
+- Charging in SmartEditor UI renewal
+			</code></pre>
+			
+			<h3>Links</h3>
+			<ul>
+				<li><a href='https://kin.naver.com/volunteer/index.nave'>Knowledge Donation</a></li>
+				<li><a href='https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=0&ie=utf8&query=%EC%A7%80%EC%8B%9D%EC%9D%B8+%EB%9E%AD%ED%82%B9'>Naver Search - Knowlege In ranking</a></li>
+			</ul>
+            
+			<!--- 2014 ~~ 2017 -->
 				<h2>
 					2014 ~ 2017 : Naver Calender as a full-stack developer
 				</h2>
@@ -100,85 +192,15 @@
 6. Maintaining calendar components.
 7. Engaging in Calendar customer inquiries.
 					</code></pre>
-			<h2>2017 ~ 2019: Naver Knowlege iN as a full-stack developer</h2>
-			<h3>Stack</h3>
-			<ul>
-				<li><code>DB</code>: mysql</li>
-				<li><code>BE</code>: Java, Spring Framework, JDBC, PHP</li>
-				<li><code>FE</code>: JSP, Jindo JS, Jquery, CSS</li>
-				<li><code>Build</code>: Gradle</li>
-				<li><code>ETC</code>: docker, lombok</li>
-			</ul>
-			<pre lang="no-highlight"><code>1. Tranfer Jindo> Jquery Code.
-2. Designing scholarship donation page database/Admin tool/api/Front
-- Participation in renewal educational donations
-- Development of scholarship donation pages and "donated tree" pages alone.
-
-3. Naver Content Search Name Card > Provided "Knowledge IN Ranking" api and created Spring Batch code.
-
-4. Transfer Struts > Spring Framework Code
-
-5. Lead project of transferring knowledge IN FE part.
-- The FE part of Knowledge IN was separated and transferred to its child company.
-
-6. Participate in knowledge IN "question & answer end page" renewal
-- Charging in SmartEditor UI renewal
-			</code></pre>
-			<h3>Links</h3>
-			<ul>
-				<li><a href='https://kin.naver.com/volunteer/index.nave'>Knowledge Donation</a></li>
-				<li><a href='https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=0&ie=utf8&query=%EC%A7%80%EC%8B%9D%EC%9D%B8+%EB%9E%AD%ED%82%B9'>Naver Search - Knowlege In ranking</a></li>
-			</ul>
+			<!--- 2014 ~~ 2017 -->
+				<!--- 2014 -->
+                <h2>
+                    2014 : Naver Calendar Summer Internship
+                </h2>
+			<!--- 2014 -->
 			<h2>
-				<code>BE > FE Developer</code>
-			</h2>
-			<h2>2019: Development Knowlege IN Statistics Site as a FE developer <a href='./img/beeeye.png'>Image</a></h2>
-			<h3>Stack</h3>
-			<ul>
-				<li><code>FE</code>: react js, es6, echart, typescript, axios, antd</li>
-				<li><code>Build</code>: webpack</li>
-			</ul>
-			<pre lang="no-highlight"><code>- First project since switching to FE developer, independently developing statistical tools.
-- Rendering as charts and tables by combining statistical values received from api</code></pre>
-			<h2>2019 ~ 2020: Naver Influencer as a FE developer <a href='https://in.naver.com/'>Link</a></h2>
-			<h3>Stack</h3>
-			<ul>
-				<li><code>FE</code>: node, react js, es6, redux, apollo, graphql, typescript, axios</li>
-				<li><code>TEST</code>: puppeteer, jest</li>
-				<li><code>Build</code>: webpack</li>
-				<li><code>ETC</code>: k8s, docker, eslint, prettier</li>
-			</ul>
-			<pre lang="no-highlight"><code>1. Participated in the launch of Naver influencer
-2. Development of FE-level components for collecting statistics on visits to influencer
-3. Development of photo editing components for editing home profiles (customizing the Cropper library)
-4. Develop influencer Support Pages
-5. Home Edit UI/UX Renewal
-6. Leading and development of influencer HOWTO projects
-7. Introducing e2e Testing
-8. Responsible for real deployment and monitoring of services</code></pre>
-			<h3>관련 링크</h3>
-			<ul>
-				<li><a href='https://in.naver.com/baby0817/howto'>HOW TO</a></li>
-				<li><a href='https://in.naver.com/apply'>지원하기 (네이버 로그인 필요)</a></li>
-			</ul>
-			<h2>2020 ~ 2021: Development Naver Knowledge iN eXpert FE a FE developer</h2>
-			<h3>Stack</h3>
-			<ul>
-				<li><code>FE</code>: node, react js, es6, apollo, graphql, typescript</li>
-				<li><code>TEST</code>: puppeteer, jest</li>
-				<li><code>Build</code>: webpack</li>
-				<li><code>ETC</code>: k8s, docker, eslint, prettier</li>
-			</ul>
-			<pre lang="no-highlight"><code>1. Leading Naver Knowledge iN expert Center FE part (Project Design & Construction)
-2. Development of notice and notice management page
-3. Knowledge iN eXpert group class (online class) FE development
-4. Introducing e2e Tests
-5. Transfer and refactoring existing eXpert Center pages
-6. Responsible for service distribution and server management using k8s, docker</code></pre>
-            <h3>Link</h3>
-			<ul>
-				<li><a href='https://img.etnews.com/photonews/2106/1427652_20210625110714_805_0001.jpg'>Group Class</a></li>
-			</ul>
+                    2013 : Software membership program hosted by Naver
+                </h2>
 			<h1>Toy Projects / Sharing</h1>
 			<ul>
 				<li>Development of Intellij Plugin with Kotlin for automated annotation during knowledge iN platform transition</li>
