--- a/english.html
+++ b/english.html
@@ -78,15 +78,16 @@
 				<li><code>Build</code>: webpack</li>
 				<li><code>ETC</code>: k8s, docker, eslint, prettier, jenkins, slack, sentry</li>
 			</ul>
-			<pre lang="no-highlight"><code>1. Leading Naver Knowledge iN expert Center FE part (Project Design & Construction)
+			<pre lang="no-highlight"><code>1. Leading Naver Knowledge iN expert Center FE part (Project Design & Construction, total 4 members)
 2. Development of notice and notice management page
 3. Knowledge iN eXpert group class (online class) FE development
 4. Introduction of e2e Tests
 5. Transfer and refactoring existing eXpert Center pages
 6. Responsible for service distribution and server management using k8s, docker
 7. Lots of interviewer experience.
-8. Development of slackbot for monitoring
-9. Build Jenkins CI (deploy, e2eTest)
+8. Lots of metoring experiece.
+9. Development of slackbot for monitoring
+10. Build Jenkins CI (deploy, e2eTest)
 </code></pre>
 			<h3>Link</h3>
 			<ul>
@@ -110,10 +111,10 @@
 6. Leading and development of influencer HOWTO projects
 7. Introduction of e2e Testing
 8. Responsible for real deployment and monitoring of services</code></pre>
-			<h3>관련 링크</h3>
+			<h3>Links</h3>
 			<ul>
 				<li><a href='https://in.naver.com/baby0817/howto'>HOW TO</a></li>
-				<li><a href='https://in.naver.com/apply'>지원하기 (네이버 로그인 필요)</a></li>
+				<li><a href='https://in.naver.com/apply'>Application (need login)</a></li>
 			</ul>
 			<!-- 2019 ~ 2020 -->
 			<!--- 2017 ~~ 2019 -->
