--- a/english.html
+++ b/english.html
@@ -85,7 +85,7 @@
 5. Transfer and refactoring existing eXpert Center pages
 6. Responsible for service distribution and server management using k8s, docker
 7. Lots of interviewer experience.
-8. Lots of metoring experiece.
+8. Lots of mentoring experiece.
 9. Development of slackbot for monitoring
 10. Build Jenkins CI (deploy, e2eTest)
 </code></pre>
@@ -104,13 +104,13 @@
 				<li><code>ETC</code>: k8s, docker, eslint, prettier</li>
 			</ul>
 			<pre lang="no-highlight"><code>1. Participated in the launch of Naver influencer
-2. Development of FE-level components for collecting statistics on visits to influencer
-3. Development of photo editing components for editing home profiles (customizing the Cropper library)
-4. Develop influencer Support Pages
-5. Home Edit UI/UX Renewal
-6. Leading and development of influencer HOWTO projects
-7. Introduction of e2e Testing
-8. Responsible for real deployment and monitoring of services</code></pre>
+2. Development of FE-level components for collecting statistics on visits to influencer.
+3. Development of photo editing components for editing home profiles (customizing the Cropper library).
+4. Development of influencer Application Page.
+5. UI/UX Renewal of Home Edit Page.
+6. Leading and development of influencer HOWTO projects.
+7. Introduction of e2e Testing.
+8. Responsible for real deployment and monitoring of services.</code></pre>
 			<h3>Links</h3>
 			<ul>
 				<li><a href='https://in.naver.com/baby0817/howto'>HOW TO</a></li>
@@ -140,7 +140,7 @@
 				<li><code>Build</code>: Gradle</li>
 				<li><code>ETC</code>: docker, lombok</li>
 			</ul>
-			<pre lang="no-highlight"><code>1. Tranfer Jindo> Jquery Code.
+			<pre lang="no-highlight"><code>1. Tranfer code from Jindo Framework to Jquery.
 2. Designing scholarship donation page database/Admin tool/api/Front
 - Participation in renewal educational donations
 - Development of scholarship donation pages and "donated tree" pages alone.
